fix relationship and update swagger
